--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "editor.minimap.scale": 3
+    "editor.minimap.scale": 3,
+    "editor.fastScrollSensitivity": 1,
+    "editor.tabSize": 3
 }
