--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "editor.minimap.scale": 3,
     "editor.fastScrollSensitivity": 1,
-    "editor.tabSize": 3
+    "editor.tabSize": 3,
+    "editor.fontSize": 13
 }
